buildscript {
	repositories {
		mavenCentral()
	}
}

plugins {
	id 'java'
	id 'eclipse'
	id "io.franzbecker.gradle-lombok" version "1.11"
}

jar {
   // baseName = 'LeagueInformerClient'
    //version =  '0.1.0'
    archiveName 'InfernalBotManagerClient.jar'
    manifest {
        attributes "Main-Class": "net.nilsghesquiere.Main"
    }
 
    from {
        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

lombok {
	version = '1.16.20'
	sha256 = ""
}

repositories {
    mavenCentral()
}
version = '1.0'
sourceCompatibility = 1.8
targetCompatibility = 1.8

sourceSets {
    main {
        java {
            srcDir 'src/main/java'
           // exclude '**/nocompile/**'
       }
   }
}

dependencies {
    compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
	compile(group: 'com.google.code.gson', name: 'gson', version: '2.3.1')
	compile(group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.3')
	compile(group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.9.4')
	compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.0")
	compile(group: 'org.springframework', name: 'spring-web', version: '5.0.3.RELEASE')
	compile(group: 'org.xerial', name: 'sqlite-jdbc', version: '3.21.0.1')
	compile(group: 'org.ini4j', name: 'ini4j', version: '0.5.1')
	compile(group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25')
	compile(group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3')
	testCompile(group: 'junit', name: 'junit', version: '4.+')
}

test {
    systemProperties 'property': 'value'
}

